@@ -370,7 +370,7 @@ body {
         padding: 0.25rem 0.5rem;
     }
     .filter-label {
-        display: inline-block;
+        display: inline-block; padding-left: 0.25rem;
         img, svg {
             height: 1rem; width: 1rem; vertical-align: text-bottom;
         }
